[gd_scene load_steps=2 format=3 uid="uid://bdtqckkiw6wux"]

[ext_resource type="Script" path="res://Scripts/in_game_menu.gd" id="1_deqwi"]

[node name="inGameMenu" type="Node2D"]
script = ExtResource("1_deqwi")

[node name="MainMenu" type="Button" parent="."]
offset_left = -185.0
offset_top = -72.0
offset_right = 195.0
offset_bottom = 68.0
text = "Main Menu"
metadata/_edit_use_anchors_ = true

[node name="Quit" type="Button" parent="."]
offset_left = -185.0
offset_top = 90.0
offset_right = 195.0
offset_bottom = 230.0
text = "Quit Game"
metadata/_edit_use_anchors_ = true

[node name="Close" type="Button" parent="."]
offset_left = -185.0
offset_top = -234.0
offset_right = 195.0
offset_bottom = -94.0
text = "Close"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
